# Stonefish_Bluerov_Ardupilot_Simulation

MBARI-vehicles-sim-ros2/: .gitignore  INSTALLATION_TROUBLESHOOTING.md  README.md
MBARI-vehicles-sim-ros2/gazebo_ws/: COMMANDS-SHEET.md
MBARI-vehicles-sim-ros2/gazebo_ws/rov_ricketts_description/: CMakeLists.txt  package.xml
bluerov_mav2ros/: CMakeLists.txt  README.md  package.xml
bluerov_mav2ros/include/: bridge.py
bluerov_mav2ros/launch/: bluerov_mav2ros.launch.py
bluerov_mav2ros/param/: stonefish_bluerov.params  stonefish_bluerov_hz.params
bluerov_mav2ros/scripts/: cmd_vel_map.py  node.py
stonefish_bluerov2/: CMakeLists.txt  LICENSE  README.md  package.xml
stonefish_bluerov2/data/: bluerov2.urdf  flat.mtl
stonefish_bluerov2/data/bluerov2/: bluerov2_phy.mtl
stonefish_bluerov2/data/models/: Turbine.dae  Turbine.mtl  Turbine.stl  oil_drum.mtl  rust_pipe.mtl
stonefish_bluerov2/data/opti_blueboat/: front_metal_or.mtl  left.mtl  left_side2.mtl  metal.mtl  metal_fron.mtl  rear_metal.mtl
stonefish_bluerov2/data/turbines/: turbine1.blend  turbine2.blend  turbine2.blend1  turbines.blend
stonefish_bluerov2/data/turbines/source/: WindTurbine_02_Anim.fbx
stonefish_bluerov2/launch/: blueboat_sim.py  bluerov2_sim.py  bluesim.py
stonefish_bluerov2/scenarios/: blueboat.scn  blueboat_sea.scn  bluerov2.scn  bluerov2_farm.scn  bluerov2_tank.scn  bluerov2_test.scn  bluerov2_turbine.scn  bluesim.scn  sonobot.scn  turbine1.scn  turbine2.scn
stonefish_bluerov2/scripts/: ardusim_patch.py
stonefish_ros2/: CMakeLists.txt
(+140 files in other folders)
