<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stonefish_bluerov2</name>
  <version>0.0.0</version>
  <description>BlueROV2 simulation in Stonefish simulator with ArduSub SITL (Software-in-the-loop)</description>
  <maintainer email="bvibhav@yahoo.co.in">Vibhav B</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
